finished html portion of html-me-something

--- a/index.html
+++ b/index.html
@@ -4,26 +4,40 @@
         <title> My Life Before LaunchCode </title>
     </head>
     <body>
-        <h1> My Life Before LaunchCode </h1>
-        <h2> College! </h2>
-            <p> I went to Mizzou for a year between 2012 and 2013. I was a Film Studies Major.</p>
-            <p> During my time there I started performing stand up and sketch comedy. </p>
-            <img src="https://photos-2.dropbox.com/t/2/AACrH6Emb7pV4YeVNGtnX8VvgpV9iRcFHXjJ9oJIssrdXg/12/340995973/jpeg/32x32/1/_/1/2/522532_564955386851750_822134142_n.jpg/EIyT79QCGPQJIAcoBw/Jcha_FAlxEqagbif-squ49TsI16rHazcT4SE77Im_zk?size=2048x1536&size_mode=3">
-            <p> I realized I wasn't happy with my major choice and through a "mutual" decision with the school I decided to leave </p>
-            <img src="https://photos-6.dropbox.com/t/2/AADovXH8jwkiWgFnWMl-x3ZTxniyxxTZAHvtJjz0gRP65A/12/340995973/jpeg/32x32/1/_/1/2/177263_221519534645583_1830844795_o.jpg/EIyT79QCGPUJIAcoBw/D2sOyGrfmP3BiHWthYpVTkcfx1zOpa3zhhz8ZQjZHJg?size=2048x1536&size_mode=3">
-         <h2> Post Drop-Out! </h2>
-            <p> After moving back home, I started doing more comedy and even made friends! </p>
-            <img src="https://photos-1.dropbox.com/t/2/AABqAloeSANR1bO_LK8po7VzoxpfM5Vj-WceKJisdBt8IQ/12/340995973/jpeg/32x32/1/_/1/2/1393602_10100752898382777_357622028_n.jpg/EIyT79QCGPgJIAcoBw/QhvJ_JUpyokh8CFIzzsNjDbQ3Z7liV1DkQFggU46AbY?size=2048x1536&size_mode=3">     
-         <h2> Focusing On Comedy </h2>    
-            <p> Over the course of 4 years I got to travel the country and meet some of my heroes and meet funny comics from all acros the country! </p>
-            <img src="https://photos-4.dropbox.com/t/2/AAAKLv6Fp9pqeRQM59p_DA0WEPFOZuMmn0YECJgKs1o3WQ/12/340995973/jpeg/32x32/1/_/1/2/10734107_10205939867844052_8654465610923155116_n.jpg/EIyT79QCGPkJIAcoBw/G8sEh5hvxhip9Vjh2q9Y9W26LZ9MhzvtNKxj-4F3Zlg?size=2048x1536&size_mode=3">
-            <img src="https://photos-6.dropbox.com/t/2/AAD6i6FocRE4i0CQMEiqwl8fe0llFwVGUCtFrBlQsHREjg/12/340995973/jpeg/32x32/1/_/1/2/11357175_932826636739840_478923846039823522_o.jpg/EIyT79QCGPoJIAcoBw/0t0RaTeFroKjl7B4vU6Ez4vse5XBzUDS8oqqkUoZYWY?size=2048x1536&size_mode=3">
-            <img src="https://photos-6.dropbox.com/t/2/AAAmTwzdZqzOvSfVcOpOUgMBR1-JihaHuctBds4yOAMG0A/12/340995973/jpeg/32x32/1/_/1/2/12094813_718698298264528_8053007869779592335_o.jpg/EIyT79QCGPsJIAcoBw/-sOttBh791HWGx0kjFx4PsV5wMuutolT8RXmwxs0iyM?size=2048x1536&size_mode=3">
-            <p> I even had the opprotunity to open for Wyatt Cenac once! </p>
-            <img src="https://photos-4.dropbox.com/t/2/AACnkT5HCwnLBXsxYyFtdOsWLRhHgp5RWMO1f-v9HOPxhQ/12/340995973/jpeg/32x32/1/_/1/2/11741312_10205965661757519_4671785196040320919_o.jpg/EIyT79QCGPwJIAcoBw/2o4kvtNzKpC04zZNDP7KO6xbS00zRK2Cvo78USBYX8A?size=2048x1536&size_mode=3">
-        <h2> But Something Was Missing </h2>
-            <p> Despite my newfound happiness, I was still working a part time job and wasn't making enough money to do comedy full time.' </p>
-            <p> I needed to make a change in my life for the better. That was when I heard about LaunchCode </p>
-            <p> </p>        
+        <main>
+            <header><h1> My Life Before LaunchCode </h1></header>
+            <article>
+                <h2> College! </h2>
+                    <p> I went to Mizzou for a year between 2012 and 2013. I was a Film Studies Major.</p>
+                    <p> During my time there I started performing stand up and sketch comedy. </p>
+                    <img src="https://photos-2.dropbox.com/t/2/AACrH6Emb7pV4YeVNGtnX8VvgpV9iRcFHXjJ9oJIssrdXg/12/340995973/jpeg/32x32/1/_/1/2/522532_564955386851750_822134142_n.jpg/EIyT79QCGPQJIAcoBw/Jcha_FAlxEqagbif-squ49TsI16rHazcT4SE77Im_zk?size=2048x1536&size_mode=3">
+                    <p> I realized I wasn't happy with my major choice and through a "mutual" decision with the school I decided to leave </p>
+                    <img src="https://photos-6.dropbox.com/t/2/AADovXH8jwkiWgFnWMl-x3ZTxniyxxTZAHvtJjz0gRP65A/12/340995973/jpeg/32x32/1/_/1/2/177263_221519534645583_1830844795_o.jpg/EIyT79QCGPUJIAcoBw/D2sOyGrfmP3BiHWthYpVTkcfx1zOpa3zhhz8ZQjZHJg?size=2048x1536&size_mode=3">
+            </article>
+            <article>
+                <h2> Post Drop-Out! </h2>
+                    <p> After moving back home, I started doing more comedy and even made friends! </p>
+                    <img src="https://photos-1.dropbox.com/t/2/AABqAloeSANR1bO_LK8po7VzoxpfM5Vj-WceKJisdBt8IQ/12/340995973/jpeg/32x32/1/_/1/2/1393602_10100752898382777_357622028_n.jpg/EIyT79QCGPgJIAcoBw/QhvJ_JUpyokh8CFIzzsNjDbQ3Z7liV1DkQFggU46AbY?size=2048x1536&size_mode=3">     
+            </article>
+            <article>
+                <h2> Focusing On Comedy! </h2>    
+                    <p> Over the course of 4 years I got to travel the country and meet some of my heroes and meet funny comics from all acros the country! </p>
+                    <img src="https://photos-4.dropbox.com/t/2/AAAKLv6Fp9pqeRQM59p_DA0WEPFOZuMmn0YECJgKs1o3WQ/12/340995973/jpeg/32x32/1/_/1/2/10734107_10205939867844052_8654465610923155116_n.jpg/EIyT79QCGPkJIAcoBw/G8sEh5hvxhip9Vjh2q9Y9W26LZ9MhzvtNKxj-4F3Zlg?size=2048x1536&size_mode=3">
+                    <img src="https://photos-6.dropbox.com/t/2/AAD6i6FocRE4i0CQMEiqwl8fe0llFwVGUCtFrBlQsHREjg/12/340995973/jpeg/32x32/1/_/1/2/11357175_932826636739840_478923846039823522_o.jpg/EIyT79QCGPoJIAcoBw/0t0RaTeFroKjl7B4vU6Ez4vse5XBzUDS8oqqkUoZYWY?size=2048x1536&size_mode=3">
+                    <img src="https://photos-6.dropbox.com/t/2/AAAmTwzdZqzOvSfVcOpOUgMBR1-JihaHuctBds4yOAMG0A/12/340995973/jpeg/32x32/1/_/1/2/12094813_718698298264528_8053007869779592335_o.jpg/EIyT79QCGPsJIAcoBw/-sOttBh791HWGx0kjFx4PsV5wMuutolT8RXmwxs0iyM?size=2048x1536&size_mode=3">
+                    <p> I even had the opprotunity to open for Wyatt Cenac once! </p>
+                    <img src="https://photos-4.dropbox.com/t/2/AACnkT5HCwnLBXsxYyFtdOsWLRhHgp5RWMO1f-v9HOPxhQ/12/340995973/jpeg/32x32/1/_/1/2/11741312_10205965661757519_4671785196040320919_o.jpg/EIyT79QCGPwJIAcoBw/2o4kvtNzKpC04zZNDP7KO6xbS00zRK2Cvo78USBYX8A?size=2048x1536&size_mode=3">
+            </article>
+            <article>
+            <h2> But Something Was Missing! </h2>
+                <p> Despite my newfound happiness, I was still working a part time job and wasn't making enough money to do comedy full time.' </p>
+                <p> I needed to make a change in my life for the better. That was when I heard about LaunchCode. </p>
+                <p> I decided to sign up and that's kind of where the story ends. There's more details but that's not important right now. </p>
+            </article>   
+                <footer> 
+                    <p> Created by Justin Luke &copy; </p>
+                    <p> Follow me on <a href="https://twitter.com/imjustinluke?lang=en"> Twitter </a>
+                </footer>
+        </main>                    
     </body>
 </html>
