added css file, linked to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
     <head>
         <title> My Life Before LaunchCode </title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <main>
